set path to sample model file